--- a/core/templates/login.html
+++ b/core/templates/login.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Collab</title>
+  <title>CollabIn</title>
   <link rel="icon" href="{% static 'favicon.ico' %}?v=1" type="image/x-icon">
   <link rel="shortcut icon" href="{% static 'favicon.ico' %}?v=1" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
@@ -659,7 +659,7 @@
   <header class="navbar">
     <a class="logo" href="{% url 'home' %}">
       <i class="fa-brands fa-github main-logo"></i>
-      <strong class="bytesize-font">Collab</strong>
+      <strong class="bytesize-font">CollabIn</strong>
     </a>
     <nav>
       <a href="#features">Features</a>
